fix: purple base for links contrast

--- a/src/style/dark-theme.tokens.sass
+++ b/src/style/dark-theme.tokens.sass
@@ -26,7 +26,7 @@
 	--color-green-dark: #108043
 
 	--color-purple-light: #E3D0FF
-	--color-purple-base: #6F5AF1
+	--color-purple-base: #A394FF
 	--color-purple-dark: #6e5af14f
 
 	--color-background: #212121
